# docker_setup

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  debug.txt  docker-compose.yml  manage.py  migrate_all.bat  pyproject.toml  requirements.txt  schema.yaml  wait_for_db.py
backend/accounts/: admin.py  apps.py  authentication.py  bulk_upload_view.py  csv_admin.py  csv_models.py  csv_processor.py  csv_serializers.py  csv_urls.py  csv_views.py  dashboard_views.py  email_service.py  fm_scope.py  models.py  owner_views.py  people_hub_admin.py  people_hub_serializers.py  people_hub_urls.py  people_hub_views.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/amenities/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/analytics/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/backups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/blog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/calendar_alerts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/communication/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/data_export/: admin.py  apps.py  export_views.py  models.py  serializers.py  urls.py  views.py
backend/developer_portal/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/docs/: API_DOCUMENTATION.md
backend/entertainment/: admin.py  apps.py  models.py  serializers.py  (+4 more)
(+323 files in other folders)
