[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoa-backend"
version = "0.1.0"
description = "HOA Connect Hub Django backend"
requires-python = ">=3.11"

authors = [
  { name = "HOA Team" }
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "propflow.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
